Macro optimizations
On my computer, execution time change from 0.229690646 to 0.001300134
seconds.